配置了路由，网络模块，引入了tabbar，初建了navbar

--- a/项目小结.md
+++ b/项目小结.md
@@ -1,10 +1,33 @@
-### 目录结构
+### 1.目录结构
 
 - 刚开始一个项目，最好设置好目录结构
 
 ---
 
-### 统一的 CSS 文件
+### 2.统一的 CSS 文件
 
 - github 上查找 normalize.css 用来给 css 初始化
 - 再创建一个 base.css 文件，其内引入 normalize.css
+
+### 3.修改配置，新增别名【注】在 DOM 中使用别名，需要加~
+
+- 新增 vue.config.js 文件，module.exports = { configureWebpack: { ... } }
+
+```
+  module.exports = {
+    configureWebpack: {
+      resolve: {
+        alias: {
+          assets: "@/assets",
+          common: "@/common",
+          components: "@/components",
+          network: "@/network",
+          views: "@views"
+          /* 由于router和store只在main.js里引用，且其他地方只需要 this.$router就可以，所以不需要 */
+        }
+      }
+    }
+  };
+```
+
+### 4.项目模块划分 -> 导入 tabbar，设置路由映射
