完善Home菜单的Goods

--- a/项目小结.md
+++ b/项目小结.md
@@ -1,15 +1,15 @@
-### 1.目录结构
+### 1. 目录结构
 
 - 刚开始一个项目，最好设置好目录结构
 
 ---
 
-### 2.统一的 CSS 文件
+### 2. 统一的 CSS 文件
 
 - github 上查找 normalize.css 用来给 css 初始化
 - 再创建一个 base.css 文件，其内引入 normalize.css
 
-### 3.修改配置，新增别名【注】在 DOM 中使用别名，需要加~
+### 3. 修改配置，新增别名【注】在 DOM 中使用别名，需要加~
 
 - 新增 vue.config.js 文件，module.exports = { configureWebpack: { ... } }
 
@@ -30,4 +30,23 @@
   };
 ```
 
-### 4.项目模块划分 -> 导入 tabbar，设置路由映射
+### 4. 项目模块划分 -> 导入 tabbar，设置路由映射
+
+---
+
+### 5. 连接数组的三种方法：
+
+```
+//1.用 apply，但该方法无法做到响应式
+  [].push.apply(arr1, arr2);
+
+//2.用...扩展运算符
+  arr1.push(...arr2);
+
+//3.用concat连接数组
+  arr1 = arr1.concat(arr2);
+```
+
+---
+
+### 6. 背景样式的缩写： background:bg-color bg-image position/bg-size bg-repeat bg-origin bg-clip bg-attachment initial|inherit;
