封装了better-scroll,做了回到顶部按钮

--- a/项目总结/项目小结.md
+++ b/项目总结/项目小结.md
@@ -50,3 +50,27 @@
 ---
 
 ### 6. 背景样式的缩写： background:bg-color bg-image position/bg-size bg-repeat bg-origin bg-clip bg-attachment initial|inherit;
+
+---
+
+### 7. better-scroll 可以解决 swiper 在移动端上触屏滚动会卡顿的问题
+
+```
+//下方步骤也可以在Swiper独立组件中弄。只要注意：BS只会给其内的第一个子元素弄better滚动
+
+**Home.vue文件的标签中，给swiper添加类名**
+//这一步是因为 BS 只会给其内的第一个子元素弄
+    <div class="swiper_wrapper">
+      <home-swiper :sun_banners="banners"></home-swiper>
+    </div>
+
+**其下的脚本里，mounted()生命周期函数里，因为mounted之后DOM就加载完了，可以获取到**
+  import BScroll from "better-scroll";
+  mounted() {
+    new BScroll(".swiper_wrapper");
+  },
+```
+
+---
+
+### 8. this.\$refs.refName 用来父访问子，(前提是在子组件实例处 添加 ref="refName")
