丰富了下detail页面

--- a/项目总结/@还未解决的问题.md
+++ b/项目总结/@还未解决的问题.md
@@ -6,3 +6,5 @@
    - 用 vuex 声明一个公共的变量，然后再 SwiperItem.vue 里的 mounted() 里去修改该变量，当该变量 == 图片数量时，就执行 initDom()和 moveAuto()
 
 3. 节流操作，研究下
+
+4. Detail 的组件里把 tabbar 组件给覆盖掉了，但这样还是会渲染 tabbar，感觉不好
