新增了登录界面+验证码滑动

--- a/项目总结/@还未解决的问题.md
+++ b/项目总结/@还未解决的问题.md
@@ -1,5 +1,7 @@
 1. 加载后切换别的路由，this.\$refs.scroll 会 undefined 的问题
 
+   - 没问题了
+
 2. 3G 网速下，轮播图没有加载完全的问题
 
    - 主要是由于 Swiper.vue 里 mounted()里的 .slide 的 DOM 是还没有加载出来的，就算用了 setTimeout，当网络实在过于慢时，也是无法获取到正确的 slidCount 的
@@ -8,3 +10,8 @@
 3. 节流操作，研究下
 
 4. Detail 的组件里把 tabbar 组件给覆盖掉了，但这样还是会渲染 tabbar，感觉不好
+
+   - 解决了，直接让其 v-show =false 就阔以了
+
+5. 在滑动验证码处，第一次 无法正常显示图片，需要 重新渲染一下才显示？
+6. 拖动滑动验证码的滑动条，会滑动到其他边上的 bug
