--- a/项目总结/@还未解决的问题.md
+++ b/项目总结/@还未解决的问题.md
@@ -14,4 +14,12 @@
    - 解决了，直接让其 v-show =false 就阔以了
 
 5. 在滑动验证码处，第一次 无法正常显示图片，需要 重新渲染一下才显示？
+
+   - 子组件的 isShow 改成 true，每次进入父组件时在 false 他
+
 6. 拖动滑动验证码的滑动条，会滑动到其他边上的 bug
+   - 解决了，是绝对定位的父元素那边没有 overflower:hideen
+
+---
+
+1. 验证注册数据是否正确的问题？
